# ticketing_system

./: .doxygen-index.toml  .gitignore  .mcp.json  CLAUDE.md  MIGRATION_PLAN.md  NEO4J_SETUP.md  README.md  TODO.md  demo.py  docker-compose.yml  manage.py  nicegui_app.py  nicegui_app_migrated.py  opencode.json  plan.md  pyproject.toml
.pi/: settings.json
agents/: decompose_hlr.py  design_ontology.py  llm_client.py  llm_tool_loop.py  mcp_server.py  skill_runner.py  verify_llr.py
ai_assist/: context_processors.py  mixins.py  urls.py  views.py
alembic/: env.py
backend_migrated/: __init__.py  connection.py  constraints.py
codebase/: apps.py  forms.py  models.py  routers.py  schemas.py  urls.py  views.py
components/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
config/: settings.py  urls.py
db/: __init__.py  base.py  events.py  neo4j.py  neo4j_constraints.py  neo4j_queries.py  neo4j_sync.py  vec.py
docs/: prompt-formatting-guide.md
examples/: add_conan_dependency.py  codebase.db.sql  codebase_graph.cypher  doxygen_schema.py  mcp_codebase_server.py  scaffold_cpp_project.py
frontend/: agent_log.py  data.py  layout.py  theme.py  widgets.py
frontend_migrated/: __init__.py  layout.py  widgets.py
llm_caller/: pyproject.toml
llm_caller/llm_caller/: __init__.py  client.py  config.py  logging.py  schema_utils.py  skill_runner.py  tool_loop.py
llm_caller/llm_caller/backends/: anthropic.py  gemini.py  openai.py
llm_caller/llm_caller/tools/: terminal.py
requirements/: forms.py  models.py  schemas.py  urls.py  views.py
scripts/: 01_flush_db.py  02_setup_project.py  03_design_requirements.py  04_benchmark_calculator.py  04_scaffold_project.py  05_benchmark_calculator.py  05_generate_skeleton.py  05_generate_tasks.py  05a_build_and_index.py  06_generate_tasks.py  07_decompose_and_scaffold.py  backfill_requirement_nodes.py  clear_neo4j.py  export_fixtures.py  import_fixtures.py  migrate_design_labels.py  migrate_ontology_to_neo4j.py  migrate_phase1_design_to_neo4j.py  migrate_phase2_requirements_to_neo4j.py  migrate_phase3_verification_to_neo4j.py
search/: apps.py  embeddings.py  signals.py
services/: dependencies.py
templates/: base.html
tests/: conftest.py  test_build_and_index.py  test_codebase_graph_primitives.py  test_codebase_schemas.py  test_collapse_external_entities.py  test_combined_handlers.py  test_combined_prompt_rendering.py  test_combined_tools.py  test_component_models.py  test_conftest_smoke.py  test_container_lookup.py  test_container_mechanism.py  test_data_layer_filter.py  test_dependency_pipeline.py  test_design_data_models.py  test_design_data_repository.py  test_design_data_transforms.py  test_indexer.py  (+37 more)
ticketing_agent/: pyproject.toml
ticketing_agent/ticketing_agent/: __init__.py  mcp_server.py
ticketing_agent/ticketing_agent/decompose/: decompose_hlr.py
ticketing_agent/ticketing_agent/design/: assess_dependencies.py  assign_components.py  design_ontology.py  design_ontology_prompt.py  design_oo.py  design_per_hlr.py  order_hlrs.py  research_dependencies.py  research_dependencies_prompt.py  scaffold_project.py  scaffold_project_prompt.py
ticketing_agent/ticketing_agent/review/: challenge_design.py  review_class_design.py  review_hlrs.py  review_node_conflict.py
ticketing_agent/ticketing_agent/verify/: verify_llr.py
(+560 files in other folders)
