[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticketing-system"
version = "0.1.0"
description = "Ticket management with requirements traceability and semantic search"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
    "nicegui>=2.0",
    "llm-caller @ git+https://github.com/danielnewman09/llm-caller.git",
    "ticketing-agent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["db", "requirements", "codebase", "components", "tickets", "search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
